# pedant

./: .gitmodules  ChangeLog.md  LICENSE  pedant.cabal
examples/: sample.hs
main/: pedant.hs
src/: Pedant.hs
