name:                pedant
version:             0.1.0.0
synopsis:            pedant
description:         pedant
license:             BSD3
license-file:        LICENSE
author:              Jacob Stanley
maintainer:          jacob@stanley.io
copyright:           Jacob Stanley (c) 2016
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  default-language:
                    Haskell2010

  ghc-options:
                    -Wall -O

  hs-source-dirs:
                    src

  build-depends:
                    ambiata-p
                  , base                            >= 3          && < 5
                  , ghc
                  , transformers                    >= 0.4        && < 0.6

  exposed-modules:
                    Pedant


executable pedant
  default-language:
                    Haskell2010

  ghc-options:
                    -Wall -threaded

  main-is:
                    main/pedant.hs

  build-depends:
                    ambiata-p
                  , base
                  , containers                      == 0.5.*
                  , ghc
                  , ghc-exactprint                  == 0.5.*
                  , pretty-show                     == 1.6.*
                  , text                            == 1.2.*
                  , transformers                    >= 0.4        && < 0.6
